--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cors": "^2.8.5",
+    "data-uri": "^0.0.3",
     "express": "^4.18.1",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.16"
   }
 }
