--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "react-tailwindcss-select": "^1.8.5",
-    "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,8 +19,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
